ISPN-10225 Upgrade to WildFly 17.0.1.Final